--- a/recipes/chimol.html
+++ b/recipes/chimol.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes Project</title>
+    <title>Chimol Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/chimol.html">Chimol</a>
+    <h1>Chimol - Salvadorian Dish</h1>
 </body>
 </html>
