--- a/recipes/chimol.html
+++ b/recipes/chimol.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Chimol - Salvadorian Dish</h1>
+    <img src="https://bit.ly/3nbs9FZ" alt ="Salvadorian Dish" width="250" height="250">
+    
 </body>
 </html>
