Added decription & paragraphs under img

--- a/recipes/chimol.html
+++ b/recipes/chimol.html
@@ -9,6 +9,13 @@
 <body>
     <h1>Chimol - Salvadorian Dish</h1>
     <img src="https://bit.ly/3nbs9FZ" alt ="Salvadorian Dish" width="250" height="250">
-    
+    <h2>Description:</h2>
+    <p>Chimol is the "radish" version of Pico de Gallo, A type of salsa commonly used in Mexican cuisine.
+        Traditionally made from chopped tomato, onion, serrano peppers, salt, lime juice and cilantro.
+    </p>
+
+    <p>With Chimol, Radish is added to give that peppery, nose-clearing spice while also adding some spice or "chile" to get your tongue tingling.
+        Can be eaten as a salad or more commonly as a side to complement steak with rice!
+    </p>
 </body>
 </html>
