Added unordered list of ingredients

--- a/recipes/chimol.html
+++ b/recipes/chimol.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Chimol - Salvadorian Dish</h1>
     <img src="https://bit.ly/3nbs9FZ" alt ="Salvadorian Dish" width="250" height="250">
-    <h2>Description:</h2>
+    <h2>Description</h2>
     <p>Chimol is the "radish" version of Pico de Gallo, A type of salsa commonly used in Mexican cuisine.
         Traditionally made from chopped tomato, onion, serrano peppers, salt, lime juice and cilantro.
     </p>
@@ -17,5 +17,15 @@
     <p>With Chimol, Radish is added to give that peppery, nose-clearing spice while also adding some spice or "chile" to get your tongue tingling.
         Can be eaten as a salad or more commonly as a side to complement steak with rice!
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 radishes, finely chopped</li>
+        <li>1 bunch cilantro(more than 5), chopped</li>
+        <li>3 medium tomatoes, finely chopped</li>
+        <li>2 pinches salt or to taste</li>
+        <li>1 teaspoon red pepper flakes (Optional) add your own spice if you want!</li>
+        <li>1 lemon, juiced</li>
+    </ul>
 </body>
 </html>
