Added steps needed to make dish

--- a/recipes/chimol.html
+++ b/recipes/chimol.html
@@ -12,6 +12,7 @@
     <h2>Description</h2>
     <p>Chimol is the "radish" version of Pico de Gallo, A type of salsa commonly used in Mexican cuisine.
         Traditionally made from chopped tomato, onion, serrano peppers, salt, lime juice and cilantro.
+        Tomatoes release a good amount of moisture, so you will see juice bottom of the bowl so best serve it with a spoon or large serving fork.
     </p>
 
     <p>With Chimol, Radish is added to give that peppery, nose-clearing spice while also adding some spice or "chile" to get your tongue tingling.
@@ -26,6 +27,15 @@
         <li>2 pinches salt or to taste</li>
         <li>1 teaspoon red pepper flakes (Optional) add your own spice if you want!</li>
         <li>1 lemon, juiced</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ul>
+        <li>Use ripe red tomatoes</li>
+        <li>Chop your ingredients very finely: tomato,onion,spices,cilantro, etc...</li>
+        <li>Add salt & lemon juice to your taste</li>
+        <li>Stir until the flavors blend</li>
+        <li>Serve with a slotted spoon or large serving fork.</li>
     </ul>
 </body>
 </html>
