updated index.html to include links for other dish recipes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/chimol.html">Chimol</a>
+    <a href="../odin-recipes/recipes/guacamole.html">Guacamole</a>
+    <a href="../odin-recipes/recipes/smoothie.html">Peanut Butter & Banana smoothie</a>
 </body>
 </html>
