--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/chimol.html">Chimol</a>
-    <a href="../odin-recipes/recipes/guacamole.html">Guacamole</a>
-    <a href="../odin-recipes/recipes/smoothie.html">Peanut Butter & Banana smoothie</a>
+    <p><a href="../odin-recipes/recipes/chimol.html">Chimol</a></p>
+    <p><a href="../odin-recipes/recipes/guacamole.html">Guacamole</a></p>
+    <p><a href="../odin-recipes/recipes/smoothie.html">Peanut Butter & Banana smoothie</a></p>
 </body>
 </html>
