added link to return to homepage for each recipe page

--- a/recipes/Smoothie.html
+++ b/recipes/Smoothie.html
@@ -29,5 +29,7 @@
         <li>Place bananas, milk, peanut butter, honey & ice cubes in a blender</li>
         <li>blend until smooth, about 30sec.</li>
     </ul>
+
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
