--- a/recipes/chimol.html
+++ b/recipes/chimol.html
@@ -37,5 +37,7 @@
         <li>Stir until the flavors blend</li>
         <li>Serve with a slotted spoon or large serving fork.</li>
     </ul>
+
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
