--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -37,5 +37,7 @@
         <li>Add 1/4 cup chopped cilantro, onion & serrano mixture, salt and either lime or lemon juice</li>
         <li>Taste and adjust seasonings</li>
     </ul>
+
+    <p><a href="../index.html">Return to Homepage</a></p>
 </body>
 </html>
