--- a/recipes/Smoothie.html
+++ b/recipes/Smoothie.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peanut Butter Banana Smoothie Recipe</title>
+    <title>Peanut Butter And Banana Smoothie Recipe</title>
 </head>
 <body>
-    <h1>guacamole - Salvadorian Dish</h1>
+    <h1>Peanut Butter & Banana Smoothie</h1>
     <img src="https://bit.ly/3sNDEH6" alt ="Salvadorian Dish" width="250" height="250">
     <h2>Description</h2>
     <p>
