--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -7,7 +7,7 @@
     <title>Guacamole Recipe</title>
 </head>
 <body>
-    <h1>guacamole - Salvadorian Dish</h1>
+    <h1>Guacamole</h1>
     <img src="https://bit.ly/3HtmDG9" alt ="Salvadorian Dish" width="250" height="250">
     <h2>Description</h2>
     <p>
