--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="../odin-recipes/recipes/chimol.html">Chimol</a></p>
     <p><a href="../odin-recipes/recipes/guacamole.html">Guacamole</a></p>
-    <p><a href="../odin-recipes/recipes/Smoothie.html">Peanut Butter & Banana smoothie</a></p>
+    <p><a href="../odin-recipes/recipes/Smoothie.html">Peanut Butter And Banana smoothie</a></p>
 </body>
 </html>
