fixed alt text of img tags

--- a/recipes/Smoothie.html
+++ b/recipes/Smoothie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Peanut Butter & Banana Smoothie</h1>
-    <img src="https://bit.ly/3sNDEH6" alt ="Salvadorian Dish" width="250" height="250">
+    <img src="https://bit.ly/3sNDEH6" alt ="Smoothie Recipe" width="250" height="250">
     <h2>Description</h2>
     <p>
         drink made by puréeing fruit and vegetables in a blender. A smoothie often has a liquid base such as fruit juice, dairy products, such as milk, yogurt, ice cream or cottage cheese.
