--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Guacamole</h1>
-    <img src="https://bit.ly/3HtmDG9" alt ="Salvadorian Dish" width="250" height="250">
+    <img src="https://bit.ly/3HtmDG9" alt ="Avocado Dip" width="250" height="250">
     <h2>Description</h2>
     <p>
         Guacamole is an avocado based dip,spread or can be even used as a salad first created in Mexico.
